--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-native-google-matrix",
   "version": "0.0.2",
-  "main": "index",
+  "main": "dist/index.common.js",
+  "module": "dist/index.es6.js"
   "description": "A simple react-native wrapper for Google's Distance Matrix API",
   "author": {
     "name": "Aldo Ginting",
@@ -22,10 +23,9 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "mocha": "~1.18.2",
     "chai": "~1.9.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1"
+    "mocha": "~1.18.2",
+    "node-fetch": "^1.7.3"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --timeout 10000 test/*.js"
