--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-google-matrix",
   "version": "0.0.2",
   "main": "dist/index.common.js",
-  "module": "dist/index.es6.js"
+  "module": "dist/index.es6.js",
   "description": "A simple react-native wrapper for Google's Distance Matrix API",
   "author": {
     "name": "Aldo Ginting",
@@ -23,11 +23,21 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babelrc-rollup": "^3.0.0",
     "chai": "~1.9.1",
+    "eslint": "^4.8.0",
     "mocha": "~1.18.2",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --timeout 10000 test/*.js"
+    "pretest": "rollup -c",
+    "test": "mocha --timeout 10000 test/*.js",
+    "build": "rollup -c",
+    "prepublish": "npm test"
   }
 }
