--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "babelrc-rollup": "^3.0.0",
     "chai": "~1.9.1",
     "eslint": "^4.8.0",
-    "mocha": "~1.18.2",
+    "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
